
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct phy_device {scalar_t__ interrupts; } ;


 int MII_BRCM_FET_INTREG ;
 int MII_BRCM_FET_IR_MASK ;
 scalar_t__ PHY_INTERRUPT_ENABLED ;
 int phy_read (struct phy_device*,int ) ;
 int phy_write (struct phy_device*,int ,int) ;

__attribute__((used)) static int brcm_fet_config_intr(struct phy_device *phydev)
{
 int reg, err;

 reg = phy_read(phydev, MII_BRCM_FET_INTREG);
 if (reg < 0)
  return reg;

 if (phydev->interrupts == PHY_INTERRUPT_ENABLED)
  reg &= ~MII_BRCM_FET_IR_MASK;
 else
  reg |= MII_BRCM_FET_IR_MASK;

 err = phy_write(phydev, MII_BRCM_FET_INTREG, reg);
 return err;
}
